[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruleatlas-ai"
dynamic = ["version"]
description = "RuleAtlas AI providers, connections, governance, and claim-cluster synthesis (candidate rules only)"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12"
authors = [{ name = "RuleAtlas" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "ruleatlas-contracts",
  "ruleatlas-claims",
  "ruleatlas-persistence",
  "sqlalchemy>=2.0",
  "pydantic>=2.8",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "build>=1.2.0", "twine>=5.0.0", "ruff>=0.5.0", "mypy>=1.11.0"]

[tool.uv.sources]
ruleatlas-contracts = { path = "../contracts", editable = true }
ruleatlas-claims = { path = "../claims", editable = true }
ruleatlas-persistence = { path = "../persistence", editable = true }

[project.urls]
Repository = "https://github.com/SignalSafeSoftware/ruleatlas"

[tool.hatch.version]
path = "src/ruleatlas_ai/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ruleatlas_ai"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
# ORM rows surface as Mapped[dict]/Mapped[list]; match apps/api + ruleatlas-persistence.
disallow_any_generics = false
