[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruleatlas-claims"
version = "0.1.0"
description = "RuleAtlas rule intermediate representation: claims, graph, clustering, conflicts, and gap analysis"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12"
authors = [{ name = "RuleAtlas" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "ruleatlas-contracts",
  "ruleatlas-persistence",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "build>=1.2.0", "twine>=5.0.0", "ruff>=0.5.0", "mypy>=1.11.0"]

[tool.uv.sources]
ruleatlas-contracts = { path = "../contracts", editable = true }
ruleatlas-persistence = { path = "../persistence", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/ruleatlas_claims"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Carried over verbatim from apps/api when these modules were extracted (behavior-preserving move).
"src/ruleatlas_claims/clustering/canonicalize.py" = ["E501", "SIM103"]
"src/ruleatlas_claims/conflicts/conflict_detection_v2.py" = ["SIM102"]
"src/ruleatlas_claims/structured_semantics.py" = ["SIM102", "SIM103"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
# ORM rows surface as Mapped[dict]/Mapped[list]; match apps/api + ruleatlas-persistence.
disallow_any_generics = false
