[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruleatlas-contracts"
dynamic = ["version"]
description = "RuleAtlas shared kernel: enums, domain value objects, and provider/claim contracts depended on by every other package"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "RuleAtlas" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
# Kernel package: pure stdlib only (dataclasses + enum). It must stay dependency-free so every other
# package can depend on it without pulling transitive weight. Do NOT add SQLAlchemy/FastAPI/httpx here.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "build>=1.2.0", "twine>=5.0.0", "ruff>=0.5.0", "mypy>=1.11.0"]

[project.urls]
Repository = "https://github.com/SignalSafeSoftware/ruleatlas"

[tool.hatch.version]
path = "src/ruleatlas_contracts/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ruleatlas_contracts"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Preserved from apps/api when the pure classification stack moved into the kernel (Phase 2).
"src/ruleatlas_contracts/classification/scaffold_classify.py" = ["SIM102", "SIM103", "E501"]
"src/ruleatlas_contracts/classification/scaffold_markers.py" = ["E501"]
"src/ruleatlas_contracts/classification/rule_category.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
