[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruleatlas-demo"
version = "0.1.0"
description = "RuleAtlas demo/seed data generators (development only; no runtime code depends on this)"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12"
authors = [{ name = "RuleAtlas" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
# Leaf package: depends on the others so it can seed realistic data; NOTHING depends on it. It is intended
# to be installed only as a dev/demo extra of apps/api, never in a production image.
dependencies = [
  "ruleatlas-contracts",
  "ruleatlas-discovery",
  "ruleatlas-extraction",
  "ruleatlas-claims",
  "ruleatlas-ai",
  "ruleatlas-exports",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "build>=1.2.0", "twine>=5.0.0", "ruff>=0.5.0", "mypy>=1.11.0"]

[tool.uv.sources]
ruleatlas-contracts = { path = "../contracts", editable = true }
ruleatlas-discovery = { path = "../discovery-core", editable = true }
ruleatlas-extraction = { path = "../extraction", editable = true }
ruleatlas-claims = { path = "../claims", editable = true }
ruleatlas-ai = { path = "../ai", editable = true }
ruleatlas-exports = { path = "../exports", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/ruleatlas_demo"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
