[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruleatlas-discovery"
version = "0.1.0"
description = "Reusable discovery, file type, line count, and directory tree helpers for RuleAtlas"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12"
authors = [{ name = "RuleAtlas" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "build>=1.2.0", "twine>=5.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/ruleatlas_discovery"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
