[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruleatlas-extraction"
dynamic = ["version"]
description = "RuleAtlas heuristic + BDD + comment/scaffold rule-candidate extraction from source files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "RuleAtlas" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "ruleatlas-contracts>=0.1.0",
  "ruleatlas-discovery>=0.1.0",
  "ruleatlas-persistence>=0.1.0",
  "sqlalchemy>=2.0",
  "pydantic>=2.8",
  "gherkin-official>=41.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "build>=1.2.0", "twine>=5.0.0", "ruff>=0.5.0", "mypy>=1.11.0"]

# Local (in-repo) resolution of the sibling packages for uv-based development.
[tool.uv.sources]
ruleatlas-contracts = { workspace = true }
ruleatlas-discovery = { workspace = true }
ruleatlas-persistence = { workspace = true }

[project.urls]
Repository = "https://github.com/SignalSafeSoftware/ruleatlas"

[tool.hatch.version]
path = "src/ruleatlas_extraction/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ruleatlas_extraction"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Carried over verbatim from apps/api when this module was extracted (behavior-preserving move).
"src/ruleatlas_extraction/bdd/bdd_claims.py" = ["E501", "SIM102"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
# ORM rows surface as Mapped[dict]/Mapped[list]; match apps/api + ruleatlas-persistence.
disallow_any_generics = false
