[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruleatlas-persistence"
dynamic = ["version"]
description = "RuleAtlas persistence layer: SQLAlchemy ORM models, repositories, and the declarative Base shared by every context that reads or writes the database"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12"
authors = [{ name = "RuleAtlas" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "ruleatlas-contracts",
  "sqlalchemy>=2.0",
  # Pin to match apps/api (^0.1.8): 0.2.0 changed the RepositoryFactory protocol signatures.
  "sqlphilosophy>=0.1.8,<0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "build>=1.2.0", "twine>=5.0.0", "ruff>=0.5.0", "mypy>=1.11.0"]

[tool.uv.sources]
ruleatlas-contracts = { path = "../contracts", editable = true }

[project.urls]
Repository = "https://github.com/SignalSafeSoftware/ruleatlas"

[tool.hatch.version]
path = "src/ruleatlas_persistence/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ruleatlas_persistence"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
# ORM layer: SQLAlchemy JSON columns are naturally Mapped[dict]/Mapped[list]. Enforcing full generic args on
# every JSON column is low-value churn, so relax just this one strict sub-flag (everything else stays strict).
disallow_any_generics = false
mypy_path = "src"
